# squarly-hoop

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake_modules/: FindFMOD.cmake
src/: Background.cpp  Background.h  Bullet.cpp  Bullet.h  DebugHelper.h  DebugHelper.inl  Enemy.cpp  Enemy.h  EntityManager.cpp  EntityManager.h  Explosion.cpp  Explosion.h  Game.cpp  Game.h  Highscore.cpp  Highscore.h  LoadSettings.cpp  LoadSettings.h  Mouse.cpp  Mouse.h  Particle.cpp  Particle.h  Player.cpp  Player.h  Score.cpp  Score.h  ShootingPaterns.cpp  ShootingPaterns.h  TextureManager.cpp  TextureManager.h  Utilities.cpp  Utilities.h  Utils.cpp  Utils.h
src/Debug/: Debug.cpp  Debug.h
src/debug/: Debug.cpp  Debug.h  Debug.inl
src/menu/: Button.cpp  Button.h  Menu.cpp  Menu.h
src/music/: BeatDetector.cpp  BeatDetector.h  LICENSE.md  MIT_LICENSE.md  Music.cpp  Music.h  Sound.cpp  Sound.h  SoundController.cpp  TimeStamp.cpp  TimeStamp.h
src/sound/: Music.cpp  Music.h  Sound.h  SoundController.cpp  SoundController.h
